2009-09-05  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el
	(folding-kbd): Modernize macro.
	(folding-narrow-by-default): Move variable
	definition before `folding-advice-instantiate' which
	refers to it.

2009-09-02  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-directory-file-list): Correct local
	variable.
	(tinylisp-autoload-generate-loaddefs-dir): Correct insteractive
	`exclude' var setting.

	* tiny/tinydebian.el
	(tinydebian-bug-nbr-at-current-point-hash): New.
	(tinydebian-bug-nbr-at-current-point-sumber): New.

2009-08-31  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytf.el: (top level::Documentation): Remove CPAN
	references and point to freshmeat t2html project.

2009-08-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::package-install-pgp-tar): Add TEMPDIR.
	(ti::package-install-pgp-tar): Correct gpg, pgp check.

	* tiny/tinypage.el: (Commentary): Improve many paragraphs.

	* tiny/tinypath.el (tinypath-info-handler): Correct indentation.
	(tinypath-info-kill-buffers): Improve error checking.

	* tiny/tinydebian.el (tinydebian-bts-mail-title-read): New.
	(tinydebian-bts-mail-ctrl-retitle): Use
	`tinydebian-bts-mail-title-read' to offer old Subject
	for editing.

2009-08-28  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-severity):
	Correct interactive spec: Call
	'tinydebian-mail-mode-debian-address-ask-bug'.

2009-08-25  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::set-face-try-list): Improve docstring.

2009-08-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mode):
	Correct 'r' to call `tinydebian-bts-mail-type-reply'.

2009-08-20  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-:menu-info): Correct docstring.
	The hook menu is (o), not (h).

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-forwarded-main):
	Fix if-case indent.

2009-08-14  Jari Aalto  <jari.aalto@cante.net>
